finish lab codeaong

--- a/labs/tfl-google-map/solution-code/00-fetch-codealong/index.html
+++ b/labs/tfl-google-map/solution-code/00-fetch-codealong/index.html
@@ -17,7 +17,7 @@
         <fieldset id="postcode-set">
           <label for="postcode" id="postcode-label">Postcode</label>
           <input id="postcode" type="text" />
-          <button id="submit">SUBMIT</button>
+          <button type="submit">SUBMIT</button>
         </fieldset>
       </form>
       <p id="location"></p>
