--- a/labs/tfl-google-map/starter-code/00-fetch-codealong/index.html
+++ b/labs/tfl-google-map/starter-code/00-fetch-codealong/index.html
@@ -9,7 +9,7 @@
 
   <body>
     <header>
-      <h1>Postcodes</h1>
+      <h1>Postcode Lookup</h1>
     </header>
 
     <article>
@@ -17,12 +17,13 @@
         <fieldset id="postcode-set">
           <label for="postcode" id="postcode-label">Postcode</label>
           <input id="postcode" type="text" />
-          <button id="submit">SUBMIT</button>
+          <button type="submit">SUBMIT</button>
         </fieldset>
       </form>
       <p id="location"></p>
       <p id="temp"></p>
     </article>
+
     <script src="js/script.js"></script>
   </body>
 </html>
