--- a/labs/tfl-google-map/starter-code/01-bike-map/index.html
+++ b/labs/tfl-google-map/starter-code/01-bike-map/index.html
@@ -5,16 +5,12 @@
     <title>Google maps</title>
     <link rel="stylesheet" href="css/style.css" />
     <script
-      src="https://code.jquery.com/jquery-3.2.1.min.js"
-      integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-      crossorigin="anonymous"
-      defer
-    ></script>
-    <script
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDNZhcD_TKurKDAwSv4ITo8KV-dXZgbyoQ"
       defer
     ></script>
-    <script src="./js/app.js" charset="utf-8" defer></script>
+    <!-- You can sign up to Google Maps Platform to get an API key for a more hi-res Google Map -->
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=" defer></script> -->
+    <script src="js/app.js" charset="utf-8" defer></script>
   </head>
   <body>
     <div id="map"></div>
