--- a/labs/feedr/solution-code/02-templating-lab/index.html
+++ b/labs/feedr/solution-code/02-templating-lab/index.html
@@ -1,31 +1,27 @@
 <!DOCTYPE html>
 <html>
-    <head>
-      <meta charset="utf-8">
-      <title>Popular Recipes</title>
-      <link rel="stylesheet" href="css/style.css">
-    </head>
-    <body>
-      <div class="container">
-        <h1>Popular Recipes</h1>
-        <div class="recipes">
+  <head>
+    <meta charset="utf-8" />
+    <title>Popular Recipes</title>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <main class="container">
+      <h1>Popular Recipes</h1>
+      <div class="recipes"></div>
+    </main>
 
-<!-- New elements should use the following HTML structure: -->
+    <template>
+      <dl class="recipe">
+        <dt class="label">Name:</dt>
+        <dd></dd>
+        <dt class="label">Serves:</dt>
+        <dd></dd>
+        <dt class="label">Meal:</dt>
+        <dd></dd>
+      </dl>
+    </template>
 
-<!--
-
-   <div class="recipe">
-     <div><span class="label">Name: </span>Lasagne</div>
-     <div><span class="label">Serves: </span>8-12</div>
-     <div><span class="label">Meal: </span>Dinner</div>
-   </div>
-
--->
-
-        </div>
-      </div>
-
-      <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
-      <script type="text/javascript" src="js/main.js"></script>
-    </body>
+    <script type="text/javascript" src="js/main.js"></script>
+  </body>
 </html>
