--- a/labs/feedr/starter-code/01-templating-codealong-2/index.html
+++ b/labs/feedr/starter-code/01-templating-codealong-2/index.html
@@ -1,25 +1,38 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <title>Session Overview</title>
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-  <h1>Session Overview</h1>
+  <head>
+    <meta charset="utf-8" />
+    <title>Session Overview</title>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <h1>Session Overview</h1>
 
-  <div class="sessions">
-<!-- 
-    <div class="session">
-      <p class="title">What are you scarab?</p>
-      <p><span class="label">Time: </span>Tuesday 1:00 - 2:30</p>
-      <p><span class="label">Presenter: </span>Silvie Martinez</p>
-      <p>Separating scarab myth from fact</p>
-    </div>
- -->
-  </div>
+    <main class="sessions">
+      <article class="session">
+        <h2 class="title">What are you scarab?</h2>
+        <dl>
+          <dt class="label">Time:</dt>
+          <dd>Tuesday 1:00 - 2:30</dd>
+          <dt class="label">Presenter:</dt>
+          <dd>Silvie Martinez</dd>
+        </dl>
+      </article>
+    </main>
 
-  <script src="js/jquery-3.2.1.min.js"></script>
-  <script src="js/main.js"></script>
-</body>
+    <template>
+      <article class="session">
+        <h2 class="title">What are you scarab?</h2>
+        <dl>
+          <dt class="label">Time:</dt>
+          <dd>Tuesday 1:00 - 2:30</dd>
+          <dt class="label">Presenter:</dt>
+          <dd>Silvie Martinez</dd>
+        </dl>
+        <p>Separating scarab myth from fact</p>
+      </article>
+    </template>
+
+    <script src="js/main.js"></script>
+  </body>
 </html>
