Draft rick and morty

--- a/labs/feedr-1.5/solution-code/index.html
+++ b/labs/feedr-1.5/solution-code/index.html
@@ -62,8 +62,9 @@
       </article>
     </main>
 
-    <div class="pop-up hidden">
-      <button href="#" class="close-popup">close</button>
+    <!-- classes: loader hidden pop-up -->
+    <div class="pop-up loader" id="js-pop-up">
+      <button href="#" class="close-popup hidden">close</button>
       <div class="container">
         <h2>Article title here</h2>
         <p>Article description/content here.</p>
@@ -73,6 +74,6 @@
       </div>
     </div>
 
-    <script src="js/app.js"></script>
+    <script src="js/index.js" type="module"></script>
   </body>
 </html>
