Rendering Rick and Morty

--- a/labs/feedr-1.5/solution-code/index.html
+++ b/labs/feedr-1.5/solution-code/index.html
@@ -38,7 +38,7 @@
       </div>
     </header>
 
-    <main class="container">
+    <main id="js-main" class="container">
       <article class="article">
         <picture class="featured-image">
           <img src="images/article_placeholder_1.jpg" alt="" />
