Style select feeder

--- a/labs/feedr-1.5/solution-code/index.html
+++ b/labs/feedr-1.5/solution-code/index.html
@@ -24,7 +24,7 @@
       <div class="container">
         <h1>Feedr</h1>
         <form id="feeder-form">
-          <label for="feedr-select">Choose Feed:</label>
+          <label for="feedr-select" class="hidden">Choose Feed:</label>
           <select name="feed" id="feedr-select">
             <option value="">Please choose a feeder</option>
             <option value="rick-and-morty">Rick and Morty</option>
