--- a/labs/feedr-1.5/starter-code/index.html
+++ b/labs/feedr-1.5/starter-code/index.html
@@ -1,18 +1,11 @@
 <!DOCTYPE html>
-<html class="no-js" lang="">
+<html>
   <head>
     <meta charset="utf-8" />
-    <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <title>Feedr @ GA</title>
     <link
       rel="stylesheet"
       href="styles/normalize.css"
-      media="screen"
-      charset="utf-8"
-    />
-    <link
-      rel="stylesheet"
-      href="styles/html5bp.css"
       media="screen"
       charset="utf-8"
     />
@@ -27,93 +20,63 @@
   </head>
 
   <body>
-    <!--[if lt IE 8]>
-      <p class="browserupgrade">
-        You are using an <strong>outdated</strong> browser. Please
-        <a href="http://browsehappy.com/">upgrade your browser</a> to improve
-        your experience.
-      </p>
-    <![endif]-->
-
     <header>
-      <section class="container">
-        <a href="#"><h1>Feedr</h1></a>
-        <nav>
-          <ul>
-            <li>
-              <a href="#">News Source: <span>Mashable</span></a>
-              <ul>
-                <li><a href="#">Mashable</a></li>
-                <li><a href="#">Reddit</a></li>
-                <li><a href="#">Digg</a></li>
-              </ul>
-            </li>
-          </ul>
-          <section id="search">
-            <input type="text" name="name" value="" />
-            <a href="#"><img src="images/search.png" alt="" /></a>
-          </section>
-        </nav>
-        <div class="clearfix"></div>
-      </section>
-    </header>
-    <div id="popUp" class="loader hidden">
-      <a href="#" class="closePopUp">X</a>
       <div class="container">
-        <h1>Article title here</h1>
+        <h1>Feedr</h1>
+        <form id="feeder-form">
+          <label for="feedr-select" class="hidden">Choose Feed:</label>
+          <select name="feed" id="feedr-select">
+            <option value="">Please choose a feeder</option>
+            <option value="rick-and-morty">Rick and Morty</option>
+          </select>
+        </form>
+
+        <form>
+          <label for="search" class="hidden">Search</label>
+          <input type="search" name="search" id="search" />
+          <button type="submit">search</button>
+        </form>
+      </div>
+    </header>
+
+    <main id="js-main" class="container">
+      <article class="article">
+        <picture class="featured-image">
+          <img src="images/article_placeholder_1.jpg" alt="" />
+        </picture>
+        <section class="article-content">
+          <h2>Test article title</h2>
+          <h3>Lifestyle</h3>
+        </section>
+        <p class="impressions">526</p>
+      </article>
+
+      <article class="article">
+        <picture class="featured-image">
+          <img src="images/article_placeholder_1.jpg" alt="" />
+        </picture>
+        <section class="article-content">
+          <h2>Test article title</h2>
+          <h3>Lifestyle</h3>
+        </section>
+        <p class="impressions">526</p>
+      </article>
+    </main>
+
+    <!-- classes: loader hidden pop-up -->
+    <div class="pop-up loader hidden" id="js-pop-up">
+      <button href="#" class="close-popup" id="js-close-pop-up-button">
+        close
+      </button>
+      <div id="js-pop-up-content" class="container">
+        <h2>Article title here</h2>
         <p>Article description/content here.</p>
-        <a href="#" class="popUpAction" target="_blank"
+        <a href="#" class="pop-up-action" target="_blank" rel="noopener"
           >Read more from source</a
         >
       </div>
     </div>
-    <section id="main" class="container">
-      <article class="article">
-        <section class="featuredImage">
-          <img src="images/article_placeholder_1.jpg" alt="" />
-        </section>
-        <section class="article-content">
-          <a href="#"><h3>Test article title</h3></a>
-          <h6>Lifestyle</h6>
-        </section>
-        <section class="impressions">526</section>
-        <div class="clearfix"></div>
-      </article>
-      <article class="article">
-        <section class="featuredImage">
-          <img src="images/article_placeholder_2.jpg" alt="" />
-        </section>
-        <section class="article-content">
-          <a href="#"><h3>Test article title</h3></a>
-          <h6>Lifestyle</h6>
-        </section>
-        <section class="impressions">526</section>
-        <div class="clearfix"></div>
-      </article>
-      <article class="article">
-        <section class="featuredImage">
-          <img src="images/article_placeholder_2.jpg" alt="" />
-        </section>
-        <section class="article-content">
-          <a href="#"><h3>Test article title</h3></a>
-          <h6>Lifestyle</h6>
-        </section>
-        <section class="impressions">526</section>
-        <div class="clearfix"></div>
-      </article>
-      <article class="article">
-        <section class="featuredImage">
-          <img src="images/article_placeholder_1.jpg" alt="" />
-        </section>
-        <section class="article-content">
-          <a href="#"><h3>Test article title</h3></a>
-          <h6>Lifestyle</h6>
-        </section>
-        <section class="impressions">526</section>
-        <div class="clearfix"></div>
-      </article>
-    </section>
 
-    <script src="js/app.js"></script>
+    <script src="js/index.js" type="module"></script>
   </body>
 </html>
