--- a/labs/crud-firebase/solution-code/2-solution-code-CR/index.html
+++ b/labs/crud-firebase/solution-code/2-solution-code-CR/index.html
@@ -73,13 +73,19 @@
     />
     <!-- Firebase CDN -->
     <!-- The core Firebase JS SDK is always required and must be listed first -->
-    <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-app.js"></script>
+    <!-- <script
+      src="ttps://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"
+      type="module"
+    ></script> -->
 
     <!-- TODO: Add SDKs for Firebase products that you want to use
       https://firebase.google.com/docs/web/setup#available-libraries -->
-    <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-database.js"></script>
+    <!-- <script
+      src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js"
+      type="module"
+    ></script> -->
     <!-- js -->
-    <script src="js/app.js"></script>
+    <script src="js/app.js" type="module"></script>
   </body>
 </html>
 
