--- a/labs/crud-firebase/solution-code/index.html
+++ b/labs/crud-firebase/solution-code/index.html
@@ -37,7 +37,7 @@
             <p>test</p>
             <div>
               <p aria-labelledby="number of votes">
-                &#x1F5F3;: <span id="votes">0</span>
+                votes: <span id="votes">0</span>
               </p>
               <button type="button" id="vote-up" aria-labelledby="vote up">
                 &#x1F44D;
